<resources>
    <string name="app_name">Election Waka</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="noofTrees">No of Trees</string>
    <string name="submitReport">Report</string>

    <string name="title_activity_report_deforestation">Map</string>

    <!--Add location-->
    <string name="report_number_of_tree">Report Number of Tree</string>
    <string name="number_of_tree">Number of Tree</string>
    <string name="photo">Photo</string>
    <string name="please_wait">Please wait...</string>
    <string name="choose_method">Choose Method</string>
    <string name="how_to_select_pic">Please choose how you would like to get the picture.</string>
    <string name="camera_option">Camera</string>
    <string name="gallery_option">Gallery</string>
    <string name="network_error">Network Error</string>
    <string name="network_error_msg">Network Error, please ensure you are connected to the Internet</string>
    <string name="file_system_error">File System Error</string>
    <string name="file_system_error_msg">File System Error, please ensure your save path is correct!</string>
    <string name="read_more">Read more...</string>

    <!-- empty latitude -->
    <string name="invalid_latitude">Invalid value entered for latitude. Eg valid value 3.4958585</string>
    <string name="invalid_longitude">Invalid value entered for longitude. Eg valid value -3.4958585</string>

    <!--location-->
    <string name="empty_number_of_tree">Enter the number of tree to report.</string>
    <string name="empty_report_location">The location name field is .</string>
    <string name="hint_location">Enter location</string>

    <!--General string-->
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="photos">Photos</string>
    <string name="news">News</string>
    <string name="add_photo">Add Photo</string>
    <string name="save">Save</string>
    <string name="saving_">Saving...</string>
    <string name="saved">Saved</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="permissions_loader_meta_key">1</string>

    <!--parse server details-->
    <string name="parse_server_url">https://tree-app.herokuapp.com/parse</string>
    <string name="parse_app_id">tree-tracking</string>

    <string-array name="Gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="AccoutType">
        <item>Select Account Type</item>
        <item>Individual</item>
        <item>Organization</item>
    </string-array>

    <string-array name="ElectionType">
        <item>Select the election type</item>
        <item>Primary</item>
        <item>General</item>
    </string-array>

    <string-array name="Help">
        <item>Use this field only when in trouble</item>
        <item>Police harassment</item>
        <item>Fight</item>
        <item>Ballot box stolen</item>
    </string-array>

    <string-array name="Country">
        <item>Select Country</item>
        <item>Nigeria</item>
        <item>Egypt</item>
    </string-array>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="submitTree1">Report Deforestation</string>
    <string name="ok">OK</string>
    <string name="accept_permission">Acccept all permissions</string>
    <string name="permission_text">Please Click below to accept all permissions for the App to work well</string>
    <string name="app_text">Reporting tree planting(Afforestation) and Tree removal(Deforestation) activities made easy!</string>
    <string name="click">Click here to Continue</string>

    <string name="password_recovery">Recover your password</string>
    <string name="hint_email">Email</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="forgot_password_msg">Put your registered Email Id to receive password reset instructions.</string>
    <string name="reset_message">We have sent you instructions to reset your password!</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>

</resources>
